Avoid overflow css with dropdown

--- a/timesheet.css
+++ b/timesheet.css
@@ -36,7 +36,6 @@ header {
   padding-bottom: 20px;
   background: #ececec;
   text-align: center;
-  overflow-x: hidden;
 }
 header:before, h1 {
   margin: -10px 0;
